# drwn

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  Makefile  README.md  compare_est.py  compare_sensors.py  compare_viewer.cpp  count_times.py  ekf_estimator.h  estimator.h  kNN.cpp  kNN.h  kNNPF.cpp  loo_compare.py  make_kNN.cpp  mcsim.cpp  multithread.cpp  pf.cpp  plot_raw.py  py_utils.py  readme.md  rms_compare.py  rot_testing.py  show_markers.py  show_sensors.py  simulate.cpp  testEKF.cpp  test_est.cpp  test_est.py  todo.txt  ukf.cpp  util_func.cpp  util_func.h  varcalc.py  view_ball.py  view_estimate.py  view_graphs.py  viewer.cpp  (+1 more)
darwin_hw/: CM730.cpp  CMakeLists.txt  JointData.h  LinuxCM730.cpp  MX28.cpp  MX28.h  Makefile  Matrix.cpp  Matrix.h  Point.h  Utilities.h  Vector.h  calibrate_ps.cpp  drwn_action.h  drwn_action.ppc  drwn_walker.cpp  drwn_walker.h  dxl_monitor.cpp  dxl_monitor_process.cpp  dxl_monitor_process.h  file_interface.h  interface.h  loop_time.cpp  robot.h  s_contacts.h  s_imu.h  s_phasespace.h  sim_interface.h  test_darwin.cpp  test_eigen.cpp
models/: acrobot.xml  bad_darwin.xml  ball.xml  ballbounce.xml  box.xml  d_no_accel.xml  d_no_force.xml  d_no_gyro.xml  d_no_jpos.xml  d_no_jvel.xml  d_no_torque.xml  darwin.xml  darwin_m.xml  darwin_t.xml  darwin_tm.xml  humanoid.xml  swimmer.xml
